php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #49092 ReflectionFunction fails to work with functions in fully qualified namespaces
Submitted: 2009-07-28 22:46 UTC Modified: 2009-08-01 01:45 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: crystality at mail dot ru Assigned:
Status: Closed Package: Reflection related
PHP Version: 5.3.0 OS: Windows XP SP3
Private report: No CVE-ID: None
 [2009-07-28 22:46 UTC] crystality at mail dot ru
Description:
------------
Just about the same bug I've reported in #47593
This time ReflectionFunction fails to work with functions with fully qualified namespaces.

Reproduce code:
---------------
namespace ns;
function func(){}
//new \ReflectionFunction('ns\func'); //Works
new \ReflectionFunction('\ns\func'); //Throws exception

Expected result:
----------------
new ReflectionFunction object created

Actual result:
--------------
Fatal error: Uncaught exception 'ReflectionException' with message 'Function \ns\func() does not exist' in ... 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-08-01 01:45 UTC] svn@php.net
Automatic comment from SVN on behalf of jani
Revision: http://svn.php.net/viewvc/?view=revision&revision=286611
Log: - Fixed bug #49092 (ReflectionFunction fails to work with functions in fully qualified namespaces)
 [2009-08-01 01:45 UTC] jani@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 10:00:02 2026 UTC