- Fixed bug #49092 (ReflectionFunction fails to work with functions in fully qualified namespaces)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@286611 c90b9560-bf6c-de11-be94-00142212c4b1